--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+ 
     
+
+
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
+        <script src="assets/javascript/project.js"></script>
 </body>
 </html>
