added divs button and title

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Bands project</title>
     <link rel="reset" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
- 
+    <h1 id="title">Bands!</h1>
+    <input id="userInput"><button id="search">Search</button>
+    <div id= "tourDates-div"></div>
+    <div id=""></div>
+    
     
 
 
