adjusted divs in html and updated .js to reflect

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <input id="userInput"><button id="search">Search</button>
             <div id="container">
                     <div id= "tourDates-div">Tour Dates:</div>  
+                    <div id="bandPic"></div>
+                    <div id="upcomingEvents"></div>
             </div>
             <div id="container">
                     <div id= "bandsInfo">Bands Info:</div>
