made events links to  bands in town where you  can buy tickets; added a dive to parse the artist image then their fb link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div id="container">
                     <div id= "tourDates-div">Tour Dates:</div>  
                     <div id="bandPic"></div>
+                    <div id="artistFB"></div>
                     <div id="upcomingEvents"></div>
             </div>
             <div id="container">
