--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Bands project</title>
+        <title>Gigs 2nite</title>
         <link rel="reset" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Barlow|Josefin+Sans|Nunito|Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-        <h1 id="title">Bands In Town</h1>
+        <h1 id="title">Gigs 2nite!</h1>
         <form>
                 <input id="userInput">
                 <input id="search" type="submit" value="Search">
         </form>
 
-        <div id="bandsInfo-Area">
-                <h3>Bands Info:</h3>
+        <div id="image-div">
+
                 <div id="bandPic"></div>
+        </div>
+        
+        <div id="bandsInfo-Area">
+                
+                <h3>Bands Info:</h3>
                 <div id="artistFB"></div>
         </div>
 
         <div id="tourDatesInfo-Area">
                 <h4 id="tourDates-div">Tour Dates:</h4>
-
                 <div id="upcomingEvents"></div>
         </div>
 
